[tool.poetry]
name = "fastapi-middleware-examples"
version = "0.1.0"
description = ""
authors = ["Aakash Khannam <aakashkh13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.1"
PyJWT = "^2.9.0"
uvicorn = "^0.30.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
